[project]
name = "nonary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jorge Gómez Zarzosa", email = "jorge.gomez@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
nonary = "nonary:cli_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
